--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div id="modal"></div>
+    <div id="TagInputPopup"></div>
     <div id="root"></div>
   </body>
 </html>
